# StarDS

./: .gitignore  .gitlab-ci.yml  404.html  BLOCK_COMPRESSION_IMPLEMENTATION.md  CLOSE_REOPEN_IMPLEMENTATION.md  CMakeLists.txt  CONCURRENT_WRITES_FIX.md  CONCURRENT_WRITES_TEST_RESULTS.md  FORMAT_SPEC.md  LICENSE.md  Makefile.tools  QUICKSTART.md  README.md  TEST_FLAKINESS_FIX.md  TOOLS_README.md  code.json  environment.yml  index.html  llms.txt  objects.inv  scs_inspect.cpp  scs_inspect_quickstart.md  test_block_compression  test_block_compression.cpp  test_blocks.scs
.github/workflows/: docs.yml  tests.yml
CameraStateFile/include/: api.h  config.h  deflate.h  deflate.hpp  ezgz.hpp  inventory.h  inventoryimpl.h  io.h  memo.h  memoized_functions.h  query.h  scs.h  scs.sh  spice_types.h  utils.h
CameraStateFile/src/: api.cpp  camerastatefile.cpp  config.cpp  inventory.cpp  inventoryimpl.cpp  io.cpp  memoized_functions.cpp  query.cpp  spice_types.cpp  utils.cpp
CameraStateFile/tests/: CMakeLists.txt  Fixtures.cpp  Fixtures.h  FunctionalTestsConfig.cpp  FunctionalTestsSpiceQueries.cpp  InventoryTests.cpp  IoTests.cpp  KernelTests.cpp  MemoTests.cpp  QueryTests.cpp  TestMain.cpp  TestUtilities.cpp  TestUtilities.h  UnitTestBlockCompression.cpp  UnitTestNdarray.cpp  UnitTestSCS.cpp  UtilTests.cpp  data.scs  test.h5
Star/include/: star.h  version.h.in
Star/tests/: CMakeLists.txt  UnitTestBlockCompression.cpp  UnitTestCloseReopenAPI.cpp  UnitTestConcurrentWrites.cpp  UnitTestFileHeader.cpp  UnitTestIntegration.cpp  UnitTestLayers.cpp  UnitTestMetadataAPI.cpp  UnitTestMetadataBlock.cpp  UnitTestNdarray.cpp  UnitTestPerformance.cpp  UnitTestS3.cpp  UnitTestSlicing.cpp  UnitTestThreading.cpp  cmake_test_discovery_3430304efc.json  cmake_test_discovery_84416647d6.json  test_debug.cpp  test_layer_meta_simple.cpp  test_mode_compatibility.cpp
StarCPPAPI/annotated/: index.html
StarCPPAPI/class_member_enums/: index.html
StarCPPAPI/class_member_functions/: index.html
StarCPPAPI/class_member_typedefs/: index.html
StarCPPAPI/class_member_variables/: index.html
StarCPPAPI/class_members/: index.html
StarCPPAPI/classes/: index.html
StarCPPAPI/files/: index.html
StarCPPAPI/functions/: index.html
StarCPPAPI/hierarchy/: index.html
StarCPPAPI/links/: index.html
StarCPPAPI/macros/: index.html
StarCPPAPI/modules/: index.html
StarCPPAPI/namespace_member_enums/: index.html
StarCPPAPI/namespace_member_functions/: index.html
StarCPPAPI/namespace_member_typedefs/: index.html
StarCPPAPI/namespace_member_variables/: index.html
StarCPPAPI/namespace_members/: index.html
StarCPPAPI/namespaces/: index.html
StarCPPAPI/pages/: index.html
StarCPPAPI/variables/: index.html
StarDS/include/: stards.h
StarDS/tests/: CMakeLists.txt  Fixtures.cpp  Fixtures.h  MockHttpServer.h  UnitTestBlockCompression.cpp  UnitTestBytesAPI.cpp  UnitTestCloseReopenAPI.cpp  UnitTestConcurrentWrites.cpp  UnitTestConversionParity.cpp  UnitTestFileHeader.cpp  UnitTestIntegration.cpp  UnitTestLayers.cpp  UnitTestMetadataAPI.cpp  UnitTestMetadataBlock.cpp  UnitTestNdarray.cpp  UnitTestPerformance.cpp  UnitTestReadmeExamples.cpp  UnitTestS3.cpp  UnitTestSlicing.cpp  UnitTestThreading.cpp  UnitTestVsiCurl.cpp  UnitTestVsiS3Mock.cpp  cmake_test_discovery_84416647d6.json  cmake_test_discovery_ef5bf67059.json  test_debug.cpp  test_layer_meta_simple.cpp  test_mode_compatibility.cpp
assets/.doxy/StarCPPAPI/xml/: Doxyfile.xml
bindings/python/: CMakeLists.txt  README.md  pyproject.toml  setup.py  setup.py.in
bindings/python/benchmarks/: bench_put_python.py
bindings/python/examples/: basic_usage.py  layers_example.py  new_features.py  numpy_interop.py  s3_example.py
bindings/python/pystar/: __init__.py  _dtypes.py  dataset.py  enums.py  logger.py  metadata.py  ndarray.py  pystar.py
bindings/python/pystards/: __init__.py  _dtypes.py  dataset.py  enums.py  logger.py  metadata.py  ndarray.py
bindings/python/swig/: dispatch.i  exceptions.i  iterators.i  ndarray.i  numpy_buffer.i  numpy_typemaps.i  rename_operators.i  star.i  star_swig.h
bindings/python/tests/: conftest.py  demo_create_open.py  test_api_sync.py  test_bytes_api.py  test_close_reopen.py  test_create_open_behavior.py  test_examples.py  test_factory_methods.py  test_factory_usage.py  test_integration.py  test_layer_item_assignment.py  test_layer_metadata.py  test_layers.py  test_metadata.py  test_native_types.py  test_ndarray.py  test_new_features.py  test_scalar_metadata.py  test_slicing.py  test_store.py
cli/stards-translate/: index.html
cli/stardsls/: index.html
cmake/: config.cmake.in
cpp-api/: index.html
docs-site/: docs_hooks.py  gen_llms_txt.py  llms_txt_hook.py  mkdocs.yml  requirements-docs.txt
docs-site/docs/: index.md
docs-site/docs/cli/: star-translate.md  stards-translate.md  stardsls.md  starls.md
docs-site/docs/cpp-api/: index.md
docs-site/docs/getting-started/: concepts.md  installation.md  quickstart.md
docs-site/docs/guides/: cloud-storage.md  compression.md  layers.md  slicing.md  threading.md
docs-site/docs/javascripts/: hero-banner.js
docs-site/docs/python-api/: index.md
docs-site/docs/reference/: api-updates.md  format-spec.md  stards.ksy
docs-site/overrides/: home.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/cloud-storage/: index.html
guides/compression/: index.html
guides/layers/: index.html
guides/slicing/: index.html
guides/threading/: index.html
notebooks/: TestingFormats.ipynb  csmstate.json  stards_graphic.py  tests.ipynb
notebooks/.ipynb_checkpoints/: TestingFormats-checkpoint.ipynb
notebooks/csmstate.zarr/m_currentParameterValue/: zarr.json
notebooks/csmstate.zarr/m_parameterType/: zarr.json
notebooks/csmstate.zarr/m_positions/: zarr.json
notebooks/csmstate.zarr/m_quaternions/: zarr.json
python-api/: index.html
reference/api-updates/: index.html
reference/format-spec/: index.html
search/: search_index.json
stylesheets/: extra.css
tools/: CMakeLists.txt
(+38 files in other folders)
